<resources>
    <string name="app_name">UserFunction</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
</resources>