<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.appcompat.widget.AppCompatEditText
       android:id="@+id/EdFirstname"
       android:hint="@string/firstname"
       android:background="@drawable/ic_shape"
       android:inputType="text"
       android:paddingStart="20dp"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_marginStart="20dp"
       android:layout_marginEnd="20dp"
       android:layout_marginTop="5dp"
       tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EdLastname"
        android:hint="@string/lastname"
        android:background="@drawable/ic_shape"
        android:inputType="text"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EdAge"
        android:hint="@string/age"
        android:background="@drawable/ic_shape"
        android:inputType="number"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EdEmail"
        android:hint="@string/email"
        android:background="@drawable/ic_shape"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TxSuccess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/success"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TxError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/error"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtaddUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_user"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtremoveUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/remove_user"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtUpdateUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/update_user"/>



</androidx.appcompat.widget.LinearLayoutCompat>